syntax = "proto3";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Microservice3";

package customeraccount;

service CustomerAccount {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse){
      option (google.api.http) = {
       post: "/api/v1/CreateAccount",
       body: "*"
    };
  };
  rpc AddToAccount (AddRequest) returns (AddResponse){
       option (google.api.http) = {
       post: "/api/v1/AddToAccount",
       body: "*"
    };
  };
  rpc Withdrawing (WithdrawRequest) returns (WithdrawResponse){
       option (google.api.http) = {
       post: "/api/v1/Withdrawing",
       body: "*"
    };
  };
  rpc GetById (GetAccountRequest) returns (GetAccountResponse){
      option (google.api.http) = {
      get: "/api/v1/account/{account_id}"
    };
  };
}

message GetAccountRequest{
    string account_id = 1;
}

message GetAccountResponse{
    string account_id = 1;
    float balance = 2;
    string customer_id = 3;
    google.protobuf.Timestamp created_date = 4;

}

message CreateAccountRequest{
    string customer_id = 1;
}

message CreateAccountResponse{
    string customer_id = 1;
    string account_id = 2;
    float balance = 3;
    google.protobuf.Timestamp created_date = 4;
}

message AddRequest{
    string customer_id = 1;
    string account_id = 2;
    float amount = 3;
}

message WithdrawRequest{
    string customer_id = 1;
    string account_id = 2;
    float amount = 3;
}

message AddResponse{
    string customer_id = 1;
    string account_id = 2;
    float amount = 3;
}

message WithdrawResponse{
    string customer_id = 1;
    string account_id = 2;
    float amount = 3;
}
